RC send keys (temp)